<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainScreenLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/gradation_animation"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/titleLogo"
            android:layout_width="210dp"
            android:layout_height="210dp"
            app:srcCompat="@drawable/enphago_logo" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/jost_light"
            android:gravity="top"
            android:text="@string/enphago"
            android:textColor="@color/white"
            android:textSize="36sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/gameStartBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:fontFamily="sans-serif-black"
            android:text="@string/game_start"
            android:textColor="@color/blue_500"
            android:textSize="18sp"
            app:rippleColor="@color/blue_200" />

        <Button
            android:id="@+id/infoBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:fontFamily="sans-serif-black"
            android:text="@string/game_info"
            android:textColor="@color/blue_500"
            android:textSize="18sp"
            app:rippleColor="@color/blue_200" />

        <Button
            android:id="@+id/recordBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:fontFamily="sans-serif-black"
            android:text="@string/setting"
            android:textColor="@color/blue_500"
            android:textSize="18sp"
            app:rippleColor="@color/blue_200" />

        <Button
            android:id="@+id/exitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:fontFamily="sans-serif-black"
            android:text="@string/exit"
            android:textColor="@color/blue_500"
            android:textSize="18sp"
            app:rippleColor="@color/blue_200" />
    </LinearLayout>

    <TextView
        android:id="@+id/versionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/jost_thin"
        android:text="@string/version"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>